# socialmedia_automation

./: .env.example  .gitignore  README.md  posts_template.xlsx  pyproject.toml
scripts/: create_template.py  linkedin_auth.py
src/: main.py  scheduler.py
src/utils/: rewriter.py  spreadsheet.py
web/: .gitignore  .vercelignore  package-lock.json  package.json  vercel.json
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/auth/login/: route.ts
web/src/app/api/cron/: route.ts
web/src/app/api/cron/refresh-tokens/: route.ts
web/src/app/api/media/[fileId]/: route.ts
web/src/app/api/posts/: route.ts
web/src/app/api/posts/[id]/: route.ts
web/src/app/api/posts/[id]/publish/: route.ts
web/src/app/api/settings/: route.ts
web/src/app/api/settings/extend-token/: route.ts
web/src/app/api/sync/google-sheets/: route.ts
web/src/app/login/: page.tsx
web/src/app/settings/: page.tsx
web/src/lib/: auth.ts  googleDrive.ts  googleSheets.ts  posts.ts  settings.ts
