[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "social-media-automation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Mastodon.py>=1.8",
    "requests>=2.31",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "schedule>=1.2",
    "openai>=1.30",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
